--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Your app description, here.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "NODE_ENV=production npm run webpack -- -p",
+    "start": "npm run webpack -- --watch",
+    "test": "node_modules/.bin/karma start react/karma.conf.js",
+    "webpack": "node_modules/.bin/webpack --config ./react/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +19,9 @@
     "url": "https://github.com/carystokes/chillin_with_stocks/issues"
   },
   "homepage": "https://github.com/carystokes/chillin_with_stocks#readme",
+  "engines": {
+    "node": "6.3.0"
+  },
   "devDependencies": {
     "enzyme": "^2.2.0",
     "isparta-loader": "^2.0.0",
