--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Your app description, here.",
   "main": "index.js",
   "scripts": {
-    "heroku-postbuild": "NODE_ENV=production npm run webpack -- -p",
-    "start": "npm run webpack -- --watch",
-    "test": "node_modules/.bin/karma start react/karma.conf.js",
-    "webpack": "node_modules/.bin/webpack --config ./react/webpack.config.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
